# Vortex-trainer

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile.coordinator  Dockerfile.worker  README.md  docker-compose.yml  prometheus.yml
examples/: resnet50_production.py
scripts/: generate_data.py  setup_prod_data.py  verify_bindings.py
vortex/: README.md  pyproject.toml
vortex-core/: Cargo.toml  build.rs
vortex-core/proto/: vortex.proto
vortex-core/src/: compression.rs  error.rs  lib.rs  metrics.rs  python_api.rs
vortex-core/src/checkpoint/: incremental.rs  manager.rs  manifest.rs  mod.rs  reader.rs  writer.rs
vortex-core/src/coordinator/: epoch.rs  leader.rs  membership.rs  mod.rs  shard_assigner.rs
vortex-core/src/data/: backpressure.rs  dataset.rs  loader.rs  mod.rs  prefetcher.rs  shard.rs
vortex-core/src/protocol/: mod.rs
vortex-core/src/runtime/: executor.rs  mod.rs  shutdown.rs
vortex-core/src/storage/: buffer_pool.rs  mod.rs  multipart.rs  s3.rs
vortex-core/src/worker/: client.rs  mod.rs  state.rs
vortex-core/tests/: stress_checkpoint.rs  stress_coordinator.rs  stress_data_loader.rs  unit_backpressure.rs  unit_manifest.rs  unit_shard_assigner.rs
vortex-dashboard/: index.html  package-lock.json  package.json  tailwind.config.js
vortex-dashboard/src/: App.tsx
vortex/examples/: pytorch_training.py
vortex/src/vortex/: __init__.py  checkpoint.py  config.py  coordinator.py  dataset.py  runtime.py
vortex/src/vortex/proto/: __init__.py  dtrainer_pb2.py  dtrainer_pb2_grpc.py
vortex/src/vortex/pytorch/: __init__.py  callback.py  dataloader.py
