[package]
name = "vortex-core"
version = "0.1.0"
edition = "2021"
authors = ["Vortex Team"]
description = "High-performance distributed training runtime core"
license = "Apache-2.0"

[lib]
name = "vortex_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full", "tracing"] }
tokio-stream = "0.1"

# gRPC
tonic = "0.10"
prost = "0.12"

# HTTP client for S3 (pure Rust)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Zero-copy bytes
bytes = "1.5"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Checksums
crc32c = "0.6"

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Python bindings
pyo3 = { version = "0.20", features = ["extension-module"], optional = true }

# Concurrency
crossbeam = "0.8"
dashmap = "5.5"
parking_lot = "0.12"

# Utilities
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
num_cpus = "1.16"
hostname = "0.3"

[build-dependencies]
tonic-build = "0.10"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.9"

[dependencies.axum]
version = "0.7"

[dependencies.tower-http]
version = "0.5"
features = ["cors"]

[features]
default = []
python = ["pyo3"]
integration = []
